# ebi-chan

./: .gitignore  README.md  pyproject.toml
src/ebi/: main.py
tests/: conftest.py  test_ebi.py
