[tool.poetry]
name = "ebi-chan"
version = "0.1.0"
description = "Exponential Backoff Iotaservice"
authors = ["The GIP team"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
aiohttp-devtools = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
